# bioinf

./: README.md  main.py
algorithmic_heights/ins/: ins.py
bioinf_utils/: setup.cfg
bioinf_utils/bioinf_utils/: utils.py
bioinformatics_armory/ini/: ini.py
bioinformatics_stronghold/cons/: cons.py
bioinformatics_stronghold/conv/: conv.py
bioinformatics_stronghold/dbru/: dbru.py
bioinformatics_stronghold/dna/: dna.py
bioinformatics_stronghold/fib/: fib.py
bioinformatics_stronghold/fibd/: fibd.py
bioinformatics_stronghold/full/: full.py
bioinformatics_stronghold/gc/: gc.py
bioinformatics_stronghold/grph/: grph.py
bioinformatics_stronghold/hamm/: hamm.py
bioinformatics_stronghold/iev/: iev.py
bioinformatics_stronghold/iprb/: iprb.py
bioinformatics_stronghold/kmer/: kmer.py
bioinformatics_stronghold/kmp/: kmp.py
bioinformatics_stronghold/lexf/: lexf.py
bioinformatics_stronghold/lexv/: lexv.py
bioinformatics_stronghold/lia/: lia.py
bioinformatics_stronghold/long/: long.py
bioinformatics_stronghold/mrna/: mrna.py
bioinformatics_stronghold/nwck/: nwck.py
bioinformatics_stronghold/orf/: orf.py
bioinformatics_stronghold/pcov/: pcov.py
bioinformatics_stronghold/perm/: perm.py
bioinformatics_stronghold/prob/: prob.py
bioinformatics_stronghold/prot/: prot.py
bioinformatics_stronghold/prsm/: prsm.py
bioinformatics_stronghold/prtm/: prtm.py
bioinformatics_stronghold/revc/: revc.py
fibo/: fibo.py
ini2/: ini2.py
ini3/: ini3.py
ini4/: ini4.py
ini5/: ini5.py
ini6/: ini6.py
iprb/: mc_simulation.py
(+9 files in other folders)
