[metadata]
name = bioinf_utils
version = 0.0.1
author = Dávid Csányi
author_email = csanyidavid2000@gmail.com
description = Bioinformatics utils for rosalind.info
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CsanyiDavid/bioinf/bioinf_utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
